/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java project to get you started.
 * For more details take a look at the Java Quickstart chapter in the Gradle
 * User Manual available at https://docs.gradle.org/6.5.1/userguide/tutorial_java_projects.html
 */

plugins {
    // Apply the java plugin to add support for Java
    id 'java'

    // Apply the application plugin to add support for building a CLI application.
    id 'application'
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(11))
    }
}

sourceSets {
    main {
        java {
            srcDirs 'src'
        }
        resources {
            srcDirs 'src'
        }
    }
}

repositories {
    // Use jcenter for resolving dependencies.
    // You can declare any Maven/Ivy/file repository here.
    jcenter()
}

dependencies {
    // This dependency is used by the application.
    implementation 'com.google.guava:guava:29.0-jre'
	implementation group: 'de.dfki.mary', name: 'marytts-client', version: '5.2-beta3'
	implementation group: 'de.dfki.mary', name: 'marytts-common', version: '5.2-beta3'
	implementation group: 'de.dfki.mary', name: 'marytts-lang-en', version: '5.2-beta3'
	implementation group: 'java_cup', name: 'java_cup', version: '0.9e'
	implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
	implementation group: 'org.jsoup', name: 'jsoup', version: '1.13.1'
	implementation group: 'org.json', name: 'json', version: '20201115'
	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
	implementation group: 'commons-configuration', name: 'commons-configuration', version: '1.10'

    implementation fileTree('lib') { include '*.jar' }
    implementation fileTree('javafx-sdk-15.0.1/lib') { include '*.jar' }

    runtimeOnly fileTree('lib') { include '*.jar' }
    runtimeOnly fileTree('javafx-sdk-15.0.1/lib') { include '*.jar' }
}

application {
    // Define the main class for the application.
    mainClassName = 'me.goddragon.teaseai.TeaseAI'
}

run {
    doFirst {
        jvmArgs = [
                '--module-path', 'javafx-sdk-15.0.1/lib',
                '--add-modules', 'javafx.controls,javafx.fxml,javafx.base,javafx.media,javafx.graphics,javafx.swing,javafx.web'
        ]
    }
}


